# FableBot-Mini

./: .gitignore  01_bot_development.ipynb  README.md  main.py  pyproject.toml  requirements.txt  template.py
conf/: configs.yaml  params.yaml
data/: beauty_beast.txt  frog_prince.txt  hansel_gretel.txt  jack_and_beanstalk.txt  little_mermaid.txt  rapunzel.txt  red_riding_hood.txt  rumpelstiltskin.txt  snow_white_seven_dwarves.txt  thumbelina.txt
src/: constants.py
src/components/: openai_llm_embed.py
src/pipelines/: chain.py
src/utils/: basic_utils.py  llm_utils.py
